docs/tests/typing/bad/testfile-extra_qualification-1.cpp
class A {
public:
  void A::f();
};
int main() {}

